--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -10,6 +10,7 @@ body {
   main {
     width: min(calc(100dvw - 2rem), 1600px);
     margin: 0 auto;
+    padding: .5rem;
 
     h1 {
       text-align: center;
