--- a/src/style/quiz.module.scss
+++ b/src/style/quiz.module.scss
@@ -1,13 +1,15 @@
 $color : #2563EB;
 
 .quizinfo {
-    margin: 1rem auto ;
+    margin: 1rem auto;
     background: rgb($color, .25);
     color: $color;
     padding: 1rem;
     border-radius: .5rem;
     border: 2px solid $color ;
     position: relative;
+    max-width: 1000px;
+
 
     h2 {
         font-size: 1.25rem;
@@ -30,7 +32,7 @@ $color : #2563EB;
         background: transparent;
         cursor: pointer;
         transition: 500ms all;
-        
+
         &:hover {
             border-radius: 1rem;
             background: rgb($color, .1);
@@ -46,10 +48,10 @@ $color : #2563EB;
     color: $color;
     padding: 1rem;
     border-radius: .5rem;
-    display: grid;
     border: 2px solid $color ;
+    display: grid;
 
-    max-width: 800px;
+    max-width: 1000px;
 
     @media (width > 500px) {
         grid-template-columns: 1fr 20%;
@@ -100,4 +102,65 @@ $color : #2563EB;
         }
     }
 
+}
+
+.quizsection {
+    max-width: 800px;
+    display: block;
+    margin: 0 auto;
+
+    div {
+        border-radius: .5rem;
+        border: 2px solid $color ;
+        padding: .5rem;
+        display: grid;
+        grid-template-columns: 50px 1fr;
+        place-items: center;
+        gap: .5rem;
+
+        &+div {
+            margin-top: .5rem;
+        }
+
+        svg {
+            color: $color;
+        }
+
+        input {
+            width: 100%;
+            height: 100%;
+            background: transparent;
+            outline: none;
+            border: transparent;
+            padding: .2rem .5rem;
+            color: $color;
+            font-size: 1rem;
+
+            &::placeholder {
+                color: rgb($color, .5);
+            }
+        }
+
+        p {
+            font-size: 1.5rem;
+            color: rgb($color, .5);
+
+            &::first-letter {
+                color: $color;
+            }
+        }
+    }
+
+    .space {
+        width: 80%;
+        display: block;
+        margin: .5rem auto;
+        border-radius: .5rem;
+        border: 2px solid $color ;
+        padding: .5rem;
+        text-align: center;
+        font-size: 1rem;
+        color: $color;
+        font-weight: bolder;
+    }
 }
