--- a/src/style/texttoalphabet.module.scss
+++ b/src/style/texttoalphabet.module.scss
@@ -2,24 +2,52 @@
 
     $color : #2563EB;
 
-    textarea {
-        margin: 1rem 0 0;
-        width: 100%;
-        height: 80px;
-        border: 2px solid $color ;
-        border-radius: .5rem;
-        padding: .5rem;
-        font-size: 1rem;
-        background: transparent;
-        color: $color;
-        outline: none;
-        resize: vertical;
-        
-        &::placeholder {
-            color: rgb($color, .5);
+    section {
+        position: relative;
+
+        textarea {
+            margin: 1rem 0 0;
+            width: 100%;
+            height: 80px;
+            border: 2px solid $color ;
+            border-radius: .5rem;
+            padding: .5rem 1.5rem .5rem .5rem;
+            font-size: 1rem;
+            background: transparent;
+            color: $color;
+            outline: none;
+            resize: vertical;
+
+            &::placeholder {
+                color: rgb($color, .5);
+            }
+        }
+
+        button {
+            position: absolute;
+            top: 16px;
+            right: 0px;
+            padding: .25rem;
+            border: 2px solid $color ;
+            border-radius: 0 .5rem 0 1rem;
+            padding: .4rem;
+            display: block;
+            align-items: center;
+            justify-content: center;
+            background: transparent;
+            cursor: pointer;
+
+            & svg {
+                transition: 500ms all;
+                color: rgb($color, .5);
+            }
+
+            &:hover svg {
+                color: $color;
+            }
         }
     }
-    
+
     div {
         margin: .5rem 0 0;
         display: flex;
