--- a/src/style/quiz.module.scss
+++ b/src/style/quiz.module.scss
@@ -1,166 +1,171 @@
-$color : #2563EB;
+$color: #2563eb;
 
 .quizinfo {
-    margin: 1rem auto;
-    background: rgb($color, .25);
-    color: $color;
-    padding: 1rem;
-    border-radius: .5rem;
-    border: 2px solid $color ;
-    position: relative;
-    max-width: 1000px;
+  margin: 1rem auto;
+  background: rgb($color, 0.25);
+  color: $color;
+  padding: 1rem;
+  border-radius: 0.5rem;
+  border: 2px solid $color;
+  position: relative;
+  max-width: 1000px;
 
+  h2 {
+    font-size: 1.25rem;
+    margin-bottom: 0.5rem;
+  }
 
-    h2 {
-        font-size: 1.25rem;
-        margin-bottom: .5rem;
+  button {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    grid-column: 2;
+    grid-row: 1/2;
+    aspect-ratio: 1/ 1;
+    height: 30px;
+    display: block;
+    align-items: center;
+    justify-content: center;
+    border: 2px solid $color;
+    border-radius: 0.5rem;
+    background: transparent;
+    cursor: pointer;
+    transition: 500ms all;
+
+    &:hover {
+      border-radius: 1rem;
+      background: rgb($color, 0.1);
     }
-
-    button {
-        position: absolute;
-        top: 5px;
-        right: 5px;
-        grid-column: 2;
-        grid-row: 1/2;
-        aspect-ratio: 1/ 1;
-        height: 30px;
-        display: block;
-        align-items: center;
-        justify-content: center;
-        border: 2px solid $color ;
-        border-radius: .5rem;
-        background: transparent;
-        cursor: pointer;
-        transition: 500ms all;
-
-        &:hover {
-            border-radius: 1rem;
-            background: rgb($color, .1);
-        }
-
-    }
+  }
 }
 
-
 .quizheader {
-    margin: 1rem auto 0;
-    background: rgb($color, .25);
-    color: $color;
-    padding: 1rem;
-    border-radius: .5rem;
-    border: 2px solid $color ;
-    display: grid;
+  margin: 1rem auto 0;
+  background: rgb($color, 0.25);
+  color: $color;
+  padding: 1rem;
+  border-radius: 0.5rem;
+  border: 2px solid $color;
+  display: grid;
 
-    max-width: 1000px;
+  max-width: 1000px;
+
+  @media (width > 500px) {
+    grid-template-columns: 1fr 20%;
+  }
+
+  input {
+    border: 2px solid $color;
+    border-radius: 0.5rem;
+    padding: 0.5rem;
+    font-size: 1rem;
+    background: transparent;
+    color: $color;
+    outline: none;
 
     @media (width > 500px) {
-        grid-template-columns: 1fr 20%;
+      border-radius: 0.5rem 0 0 0.5rem;
     }
 
-    input {
-        border: 2px solid $color ;
-        border-radius: .5rem;
-        padding: .5rem;
-        font-size: 1rem;
-        background: transparent;
-        color: $color;
-        outline: none;
+    &::placeholder {
+      color: rgb($color, 0.5);
+    }
+  }
 
-        @media (width > 500px) {
-            border-radius: .5rem 0 0 .5rem;
-        }
+  button {
+    border: 2px solid $color;
+    border-radius: 0.5rem;
+    padding: 0.5rem;
+    font-size: 1rem;
+    background: transparent;
+    color: $color;
+    cursor: pointer;
+    margin-top: 0.5rem;
+    transition: 500ms all;
 
-        &::placeholder {
-            color: rgb($color, .5);
-        }
+    @media (width > 500px) {
+      border-left: none;
+      margin-top: 0rem;
+      border-radius: 0 0.5rem 0.5rem 0;
     }
 
-    button {
-        border: 2px solid $color ;
-        border-radius: .5rem;
-        padding: .5rem;
-        font-size: 1rem;
-        background: transparent;
-        color: $color;
-        cursor: pointer;
-        margin-top: .5rem;
-        transition: 500ms all;
-
-        @media (width > 500px) {
-            border-left: none;
-            margin-top: 0rem;
-            border-radius: 0 .5rem .5rem 0;
-        }
-
-        &:disabled {
-            opacity: .5;
-            cursor: not-allowed;
-        }
-
-        &:hover {
-            background: rgb($color, .1);
-        }
+    &:disabled {
+      opacity: 0.5;
+      cursor: not-allowed;
     }
 
+    &:hover {
+      background: rgb($color, 0.1);
+    }
+  }
 }
 
 .quizsection {
-    max-width: 800px;
-    display: block;
-    margin: 0 auto;
+  max-width: 800px;
+  display: block;
+  margin: 0 auto;
 
-    div {
-        border-radius: .5rem;
-        border: 2px solid $color ;
-        padding: .5rem;
-        display: grid;
-        grid-template-columns: 50px 1fr;
-        place-items: center;
-        gap: .5rem;
+  div {
+    border-radius: 0.5rem;
+    border: 2px solid $color;
+    padding: 0.5rem;
+    display: grid;
+    grid-template-columns: 50px 1fr;
+    place-items: center;
+    gap: 0.5rem;
+    transition: 500ms all;
 
-        &+div {
-            margin-top: .5rem;
-        }
-
-        svg {
-            color: $color;
-        }
-
-        input {
-            width: 100%;
-            height: 100%;
-            background: transparent;
-            outline: none;
-            border: transparent;
-            padding: .2rem .5rem;
-            color: $color;
-            font-size: 1rem;
-
-            &::placeholder {
-                color: rgb($color, .5);
-            }
-        }
-
-        p {
-            font-size: 1.5rem;
-            color: rgb($color, .5);
-
-            &::first-letter {
-                color: $color;
-            }
-        }
+    &:has(input:focus-visible, input:focus, input:focus-within) {
+      background: rgb($color, 0.1);
     }
 
-    .space {
-        width: 80%;
-        display: block;
-        margin: .5rem auto;
-        border-radius: .5rem;
-        border: 2px solid $color ;
-        padding: .5rem;
-        text-align: center;
-        font-size: 1rem;
+    & + div {
+      margin-top: 0.5rem;
+    }
+
+    svg {
+      color: $color;
+    }
+
+    input {
+      width: 100%;
+      height: 100%;
+      background: transparent;
+      outline: none;
+      border: transparent;
+      padding: 0.2rem 0.5rem;
+      color: $color;
+      font-size: 1rem;
+
+      &::placeholder {
+        color: rgb($color, 0.5);
+      }
+
+      &:not(&:focus-visible, &:focus, &:focus-within, &:placeholder-shown) {
+        text-decoration: underline wavy rgb(red, 0.15);
+      }
+    }
+
+    p {
+      font-size: 1.5rem;
+      color: rgb($color, 0.5);
+
+      &::first-letter {
         color: $color;
-        font-weight: bolder;
+      }
     }
+  }
+
+  .space {
+    width: 80%;
+    display: block;
+    margin: 0.5rem auto;
+    border-radius: 0.5rem;
+    border: 2px solid $color;
+    padding: 0.5rem;
+    text-align: center;
+    font-size: 1rem;
+    color: $color;
+    font-weight: bolder;
+  }
 }
