--- a/src/style/flashcards.module.scss
+++ b/src/style/flashcards.module.scss
@@ -1,34 +1,41 @@
-$color : #2563EB;
+$color: #2563eb;
 
 .flashcards {
-    margin-top: 1rem;
-    gap: .5rem;
-    display: grid;
+  margin-top: 1rem;
+  gap: 0.5rem;
+  display: grid;
 
-    @media (width > 400px) {
-        grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  @media (width > 400px) {
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  }
+
+  div {
+    border: 4px solid $color;
+    border-radius: 0.5rem;
+    padding: 0.5rem;
+    transition: 500ms all;
+
+    svg {
+      display: block;
+      margin: 0 auto 0.5rem;
+      color: $color;
+      transition: 500ms all;
     }
 
-
-    div {
-        border: 4px solid $color;
-        border-radius: .5rem;
-        padding: .5rem;
-        transition: 500ms all;
-
-        svg {
-            display: block;
-            margin: 0 auto .5rem;
-        }
-
-        h2 {
-            text-align: center;
-        }
-
-        &:hover {
-            background: rgb($color, .25);
-            color: #fff;
-        }
+    h2 {
+      transition: 500ms all;
+      text-align: center;
+      font-family: "itim";
+      color: $color;
     }
 
+    &:hover {
+      background: rgb($color, 0.25);
+
+      svg,
+      h2 {
+        color: #fff;
+      }
+    }
+  }
 }
