--- a/src/style/texttoalphabet.module.scss
+++ b/src/style/texttoalphabet.module.scss
@@ -1,70 +1,69 @@
 .texttoalphabet {
+  $color: #2563eb;
 
-    $color : #2563EB;
+  section {
+    position: relative;
 
-    section {
-        position: relative;
+    textarea {
+      margin: 1rem 0 0;
+      width: 100%;
+      height: 80px;
+      border: 2px solid $color;
+      border-radius: 0.5rem;
+      padding: 0.5rem 1.5rem 0.5rem 0.5rem;
+      font-size: 1rem;
+      background: transparent;
+      color: $color;
+      outline: none;
+      resize: vertical;
 
-        textarea {
-            margin: 1rem 0 0;
-            width: 100%;
-            height: 80px;
-            border: 2px solid $color ;
-            border-radius: .5rem;
-            padding: .5rem 1.5rem .5rem .5rem;
-            font-size: 1rem;
-            background: transparent;
-            color: $color;
-            outline: none;
-            resize: vertical;
-
-            &::placeholder {
-                color: rgb($color, .5);
-            }
-        }
-
-        button {
-            position: absolute;
-            top: 16px;
-            right: 0px;
-            padding: .25rem;
-            border: 2px solid $color ;
-            border-radius: 0 .5rem 0 1rem;
-            padding: .4rem;
-            display: block;
-            align-items: center;
-            justify-content: center;
-            background: transparent;
-            cursor: pointer;
-
-            & svg {
-                transition: 500ms all;
-                color: rgb($color, .5);
-            }
-
-            &:hover svg {
-                color: $color;
-            }
-        }
+      &::placeholder {
+        color: rgb($color, 0.5);
+      }
     }
 
-    div {
-        margin: .5rem 0 0;
-        display: flex;
-        flex-wrap: wrap;
-        gap: 1rem;
-        border: 2px solid $color ;
-        border-radius: .5rem;
-        padding: .5rem;
+    button {
+      position: absolute;
+      top: 16px;
+      right: 0px;
+      padding: 0.25rem;
+      border: 2px solid $color;
+      border-radius: 0 0.5rem 0 1rem;
+      padding: 0.4rem;
+      display: block;
+      align-items: center;
+      justify-content: center;
+      background: transparent;
+      cursor: pointer;
 
-        p {
-            font-size: 1.5rem;
+      & svg {
+        transition: 500ms all;
+        color: rgb($color, 0.5);
+      }
 
-            span {
-                font-weight: bold;
-                color: $color;
-
-            }
-        }
+      &:hover svg {
+        color: $color;
+      }
     }
+  }
+
+  div {
+    margin: 0.5rem 0 0;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+    border: 2px solid $color;
+    border-radius: 0.5rem;
+    padding: 0.5rem;
+
+    p {
+      font-size: 1.5rem;
+
+      span {
+        font-weight: bold;
+        color: $color;
+        font-family: "itim";
+      }
+    }
+  }
 }
