--- a/src/style/flashcards.module.scss
+++ b/src/style/flashcards.module.scss
@@ -1,41 +1,54 @@
 $color: #2563eb;
 
 .flashcards {
-  margin-top: 1rem;
-  gap: 0.5rem;
   display: grid;
+  gap: 1rem;
 
-  @media (width > 400px) {
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  @media (min-width: 300px) {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+  @media (min-width: 640px) {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  @media (min-width: 768px) {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
+  @media (min-width: 1024px) {
+    grid-template-columns: repeat(6, minmax(0, 1fr));
   }
 
   div {
-    border: 4px solid $color;
+    background-color: #fff;
+    border: 2px solid rgb($color, 0.5);
+    transition: all 200ms ease-in-out;
+    padding: 1.5rem;
+    text-align: center;
     border-radius: 0.5rem;
-    padding: 0.5rem;
-    transition: 500ms all;
+
+    &:hover {
+      box-shadow: var($color);
+      transform: scale(1.05);
+
+      svg {
+        opacity: 1;
+      }
+    }
 
     svg {
-      display: block;
-      margin: 0 auto 0.5rem;
+      font-size: 1.875rem;
+      font-weight: 700;
       color: $color;
-      transition: 500ms all;
+      margin-bottom: 0.5rem;
+      transition: color 200ms ease-in-out;
+      opacity: 0.75;
     }
 
     h2 {
-      transition: 500ms all;
-      text-align: center;
-      font-family: "itim";
-      color: $color;
-    }
-
-    &:hover {
-      background: rgb($color, 0.25);
-
-      svg,
-      h2 {
-        color: #fff;
-      }
+      font-size: 0.875rem;
+      font-weight: 500;
+      color: var($color);
     }
   }
 }
