--- a/src/style/texttoalphabet.module.scss
+++ b/src/style/texttoalphabet.module.scss
@@ -1,21 +1,28 @@
 .texttoalphabet {
   $color: #2563eb;
 
+  max-width: 1000px;
+  margin: 0 auto;
+  background: #fff;
+  padding: 1rem;
+  border-radius: 0.5rem;
+  border: 2px solid rgba(37, 99, 235, 0.5);
+
   section {
     position: relative;
 
-    textarea {
-      margin: 1rem 0 0;
+    input {
+      margin: 0.5rem 0 0;
       width: 100%;
-      height: 80px;
       border: 2px solid $color;
       border-radius: 0.5rem;
-      padding: 0.5rem 1.5rem 0.5rem 0.5rem;
-      font-size: 1rem;
+      padding: 0.25rem 1.5rem 0.25rem 0.5rem;
+      font-size: 0.875rem;
+      line-height: 1.25rem;
       background: transparent;
       color: $color;
       outline: none;
-      resize: vertical;
+      padding: 0.5rem;
 
       &::placeholder {
         color: rgb($color, 0.5);
@@ -24,45 +31,81 @@
 
     button {
       position: absolute;
-      top: 16px;
-      right: 0px;
-      padding: 0.25rem;
-      border: 2px solid $color;
-      border-radius: 0 0.5rem 0 1rem;
-      padding: 0.4rem;
-      display: block;
-      align-items: center;
-      justify-content: center;
+      top: 39.5px;
+      right: 8px;
       background: transparent;
+      border: none;
+      padding: 0.4rem;
+      border-radius: 100%;
       cursor: pointer;
 
-      & svg {
+      & svg,
+      span {
         transition: 500ms all;
         color: rgb($color, 0.5);
       }
 
-      &:hover svg {
-        color: $color;
+      &:disabled {
+        cursor: not-allowed;
+        opacity: 0.5;
+      }
+
+      &:not(&:disabled):hover {
+        background: rgba($color, 0.1);
+        svg,
+        span {
+          color: $color;
+        }
       }
     }
   }
-
-  div {
-    margin: 0.5rem 0 0;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1rem;
-    border: 2px solid $color;
+  .copy {
+    position: unset;
+    display: block;
+    margin: 1rem auto;
+    border: 2px solid rgba(37, 99, 235, 0.5);
     border-radius: 0.5rem;
     padding: 0.5rem;
+    outline: none;
+    width: 100px;
 
-    p {
-      font-size: 1.5rem;
+    span {
+      margin-left: 0.5rem;
+      color: rgb($color, 0.5);
+      font-weight: 700;
+    }
+  
+  }
 
-      span {
-        font-weight: bold;
-        color: $color;
-        font-family: "itim";
+  .text {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+    color: rgb($color, 0.75);
+  }
+
+  section {
+    .text {
+      margin-top: 1.5rem;
+    }
+
+    div {
+      margin: 0.5rem 0 0;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 1rem;
+      border: 2px solid $color;
+      border-radius: 0.5rem;
+      padding: 0.5rem;
+
+      p {
+        font-size: 18px;
+        color: rgb($color, 0.75);
+
+        span {
+          font-weight: bold;
+          color: $color;
+          font-family: "itim";
+        }
       }
     }
   }
