--- a/src/style/quiz.module.scss
+++ b/src/style/quiz.module.scss
@@ -2,7 +2,7 @@ $color: #2563eb;
 
 .quizinfo {
   margin: 1rem auto;
-  background: rgb($color, 0.25);
+  background: #fff;
   color: $color;
   padding: 1rem;
   border-radius: 0.5rem;
@@ -39,9 +39,37 @@ $color: #2563eb;
   }
 }
 
+.quizresult {
+  color: $color;
+  padding: 1rem;
+  border-radius: 0.5rem;
+  border: 2px solid $color;
+  background: #fff;
+  margin: -0.5rem auto 0.5rem;
+  position: relative;
+  overflow: hidden;
+  max-width: 1000px;
+
+  p {
+    text-align: center;
+  }
+
+  &::after {
+    transition: 500ms all;
+    position: absolute;
+    left: 0px;
+    top: 0;
+    right: calc(100% - var(--percent));
+    content: "";
+    height: 100%;
+    background: rgb($color, 0.1);
+    z-index: 100;
+  }
+}
+
 .quizheader {
   margin: 1rem auto 0;
-  background: rgb($color, 0.25);
+  background: #fff;
   color: $color;
   padding: 1rem;
   border-radius: 0.5rem;
@@ -114,9 +142,10 @@ $color: #2563eb;
     place-items: center;
     gap: 0.5rem;
     transition: 500ms all;
+    background: #fff;
 
     &:has(input:focus-visible, input:focus, input:focus-within) {
-      background: rgb($color, 0.1);
+      background: rgb($color, 0.05);
     }
 
     & + div {
